[package]
name = "traprs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "traprs"
path = "src/main.rs"

[dependencies]
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pki-types = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
